# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import suppliersRouter from "./suppliers";
 import customersRouter from "./customers";
 import grnRouter from "./grn";
 import transfersRouter from "./transfers";
+import storeRequestsRouter from "./store-requests";
 import productionRouter from "./production";
 import salesRouter from "./sales";
 import paymentsRouter from "./payments";
@@ -30,6 +31,7 @@ router.use(suppliersRouter);
 router.use(customersRouter);
 router.use(grnRouter);
 router.use(transfersRouter);
+router.use(storeRequestsRouter);
 router.use(productionRouter);
 router.use(salesRouter);
 router.use(paymentsRouter);
